--- a/Anime.html
+++ b/Anime.html
@@ -6,17 +6,18 @@
 </head>
 <body>
 <center><h1>Anime</h1></center>
-<a href="Game of Thrones.html">Game of Thrones</a>
+<a href="Game of Thrones.html"><button>Game of Thrones</button></a>
+<a href="index.html"><button>Home</button></a>
 <h2><a href="https://en.wikipedia.org/wiki/Terror_in_Resonance">Zankyou no Terror</a></h2>
-<img src= "img/Zankyou.jpg">
+<img id="slides" src= "img/Zankyou1.jpg"> 
 <p>Terror in Resonance is a 12 episode series created by Shinchiro Watanabe(Cowboy Bebop, Samurai Champloo, Kids on the Slope).  
 The fantastic Soundtrack was created by Yoko Kanno(Cowboy Bebop, Kids on the Slope)</p>
 
 <h2><a href="https://en.wikipedia.org/wiki/Kids_on_the_Slope">Sakimichi no Apollon</a></h2>
-<img src= "img/Sakimichi.jpg">
+<img src= "img/Sakimichi1.jpg">
 
 
 
-
+<script src="js/anime.js"></script>
 </body>
 </html>
