--- a/Game of Thrones.html
+++ b/Game of Thrones.html
@@ -7,37 +7,40 @@
 	<body bgcolor="#BDBDBD">
 <div class="main">
 		<center><h1><font color="E6E6E6">Game of Thrones</h1></center>
-<a href="Anime.html">Anime</a>
+<a href="Anime.html"><button>Anime</button></a>
+<a href="index.html"><button>Home</button></a>
 <iframe width="100%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/67629821&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 <div class="container">		
 
 		<h2>Maps</h2>
 		<menu>
 			<menuitem>
-				<a href="img/Westeros.jpg" title="The Land of the King"><button>Westeros</button></a>
+				<button type="button" onclick="changeImage('img/Westeros.jpg');">Westeros</button>
 			</menuitem>
 			<menuitem>
-				<a href="img/Essos.jpg" title="The Free Lands"><button>Essos</button></a>
+				<button type="button" onclick="changeImage('img/Essos.jpg');">Essos</button>
 
 			</menuitem>
 		</menu>
-		
+		<img src="img/Westeros.jpg" id='Westeros'></img>
 		<h2>House Sigils</h2>
 		<p>The Noble Houses of Westeros</p>
 		<menu>
 			<menuitem>
-				<a href="img/Stark.jpg" title="pick this one"><button>Stark</button></a>
+				<button type="button" onclick="changeImages('img/Stark.jpg');">Stark</button>
 
 			</menuitem>
 			<menuitem>
-				<a href="img/Targaryen.jpg" title="this one"><button>Targaryen</button></a>
+				<button type="button" onclick="changeImages('img/Targaryen.jpg');">Targaryen</button>
 			</menuitem>
 			<menuitem>
-				<a href="img/Baratheon.jpg" title="this one"><button>Baratheon</button></a>
+				<button type="button" onclick="changeImages('img/Baratheon.jpg');">Baratheon</button>
 			</menuitem>
 		</menu>
+		<img src="img/Stark.jpg" id='Stark'></img>
 </div>
 </font>
 </div>
+<script src="js/game of thrones.js"></script>
 	</body>
 </html>
