--- a/Anime.html
+++ b/Anime.html
@@ -9,7 +9,9 @@
 <a href="Game of Thrones.html"><button>Game of Thrones</button></a>
 <a href="index.html"><button>Home</button></a>
 <h2><a href="https://en.wikipedia.org/wiki/Terror_in_Resonance">Zankyou no Terror</a></h2>
-<img id="slides" src= "img/Zankyou1.jpg"> 
+<div class="slideshow">
+<img id="slides" src= "img/Zankyou1.jpg" height="100%"> 
+</div>
 <p>Terror in Resonance is a 12 episode series created by Shinchiro Watanabe(Cowboy Bebop, Samurai Champloo, Kids on the Slope).  
 The fantastic Soundtrack was created by Yoko Kanno(Cowboy Bebop, Kids on the Slope)</p>
 
