--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 	<head>
 		<title>Home</title>
 		<link href="css/home.css" rel="stylesheet" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body bgcolor="#BDBDBD">
 <h1><center>Home</center></h1>
 <center><span id="clock"></span></center>
+<div class="menu-bar">
+<nav>
 <menu>
 	<menuitem>
 		<a href="Anime.html"><button>Anime</button></a>
 	</menuitem>
 	<menuitem>
-	<div class="invis">
-		jhalkjh
-	</div>
-	</menuitem>
-	<menuitem>
 		<a href="Game of Thrones.html"><button>Game of Thrones</button></a>
 	</menuitem>
 	<script src="js/home.js"></script>
-</menu>
+</nav>
+</div>
+	</menu>
 	</body>
 </html>
