--- a/Game of Thrones.html
+++ b/Game of Thrones.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Game of Thrones</title>
 		<link href="css/main.css" rel="stylesheet" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body bgcolor="#BDBDBD">
 <div class="main">
