--- a/Anime.html
+++ b/Anime.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Anime</title>
 	<link href="css/Anime.css" rel="stylesheet" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <center><h1>Anime</h1></center>
